# botCYeste

./: .gitignore  Cargo.toml  flake.nix
migrations/2021-05-13-184719_create_amimir/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  utils.rs
src/commands/: amimir.rs  edt.rs  mod.rs  nickname.rs  uptime.rs  user.rs
