[package]
name = "bot_cyeste"
version = "0.2.0"
authors = ["Lucas Ransan <lucas@ransan.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
rand = "0.8"
reqwest = { version = "0.11", default-features = false }
serenity = { version = "0.10", features = ["collector"] }
tokio = { version = "1.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"